Add double triple exam and update class a and class b pages

--- a/app/views/pages/class_a_endorsement.html.erb
+++ b/app/views/pages/class_a_endorsement.html.erb
@@ -72,7 +72,7 @@
   <div class="row page-package-info">
     <div class="col-sm-6">
 			<h2>CDL Class A Study Guide</h2>
-			<%= image_tag "cdl-study-guide-and-practice-test-small.png", alt: "CDL study guide", class: "cdl-book-image" %>
+			<%= image_tag "cdl_study_guide-page.png", alt: "CDL Class A study guide", class: "cdl-book-image" %>
 			<ul class="book">
 			  <li>Simple to Understand!
 			  <li>Don't Memorize Hundreds of Pages!
@@ -81,6 +81,8 @@
 			</ul>
 			<p>It took us a long time to create our Class A CDL Study Guide. After many long hours the Class A Study Guide is here for you to buy. Our strategy. Take the DMV manual plus actual exam questions, and create an easy to read Study Guide. We cut all the fluff and junk out. That means you do not have to memorize hundreds of pages of information!</p>
 
+			<p>You'll find that when you use our strategy guide, you actually learn the material while preparing yourself for the test. What that means is not only will you pass the test and get your license, you'll actually be ready to go out and use the information. A rewarding commercial driving career is well within your reach.
+
 			<div class="row text-center">
 			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
 			</div>
@@ -88,11 +90,12 @@
 
 		<div class="col-sm-6">
 			<h2>CDL Class A Practice Test</h2>
-			<ul class="book book-test">
+			<%= image_tag "cdl-practice-test.png", alt: "CDL Class A endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
 			  <li>Real Exam Questions!
 			  <li>Hundreds of Questions!
 			  <li>Same as the DMV Test!
-			  <li>Works on Everything! Smart Phone, Tablet, Computer 
+			  <li>Take on any device 
 			</ul>
 
 			<p>Many of the exam questions that see in your practice test are what you will see on the actual Class A Practice Test. Some of our exam questions are even harder than the actual test! If you are able to pass our practice tests, you will have no problem passing the real thing! Our writers have spent hundreds of hours preparing these test questions. The time and effort shows.</p>
@@ -142,7 +145,7 @@
 			  </ul>
 
 			  <ul class="feature">
-			    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+			    <li class="heading">Complete Package <span class="label label-danger">Best Deal</span><br/>(Practice Test + Study Guide)</li>
 			    <li><strong>Complete</strong> Practice Test</li>
 			    <li><strong>All</strong> Study Guide Formats</li>
 			    <li><strong>Full</strong> Access</li>
