--- a/app/views/pages/class_b_endorsement.html.erb
+++ b/app/views/pages/class_b_endorsement.html.erb
@@ -53,7 +53,7 @@
   <div class="row page-package-info">
     <div class="col-sm-6">
 			<h2>CDL Class B Study Guide</h2>
-			<%= image_tag "cdl-study-guide-and-practice-test-small.png", alt: "CDL study guide", class: "cdl-book-image" %>
+			<%= image_tag "cdl_study_guide-page.png", alt: "CDL class B study guide", class: "cdl-book-image" %>
 			<ul class="book">
 			  <li>Easy to Understand!
 			  <li>Don't Memorize Hundreds of Pages!
@@ -62,6 +62,8 @@
 			</ul>
 			<p>Our Class B study guide took hundreds of hours to develop. It includes only the information you need to know for your Class B exam on test day with our expert strategies on how to ace the test. We cut out all the extra information and fluff you'll find if you try to prepare on your own, so you can hone in on what you need to know. Start studying now so you can get your Class B license and then the career you're after.</p>
 
+			<p>We made our Class B study guide available in PDF, mobi, and ePub formats so you can study it wherever you go on whichever type of device you prefer. Feel confident knowing that you're studying the right material straight from the experts, and you'll do great on test day.</p>
+
 			<div class="row text-center">
 			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
 			</div>
@@ -69,7 +71,8 @@
 
 		<div class="col-sm-6">
 			<h2>CDL Class B Practice Test</h2>
-			<ul class="book book-test">
+			<%= image_tag "cdl-practice-test.png", alt: "Class B endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
 			  <li>Actual Test Questions!
 			  <li>Interactive and easy to use!
 			  <li>Get prepared for the DMV Test!
