--- a/app/views/pages/double_triple_endorsement.html.erb
+++ b/app/views/pages/double_triple_endorsement.html.erb
@@ -1,15 +1,109 @@
 <% content_for :head do %>
-  <title>Double/Triple Endorsement Study Guide & Practice Tests</title>
-  <meta name="description" content="Double/Triple Endorsement study guides and practice tests are available at CDLStudyGuideHQ.com - check them out here.">
+  <title>Double/Triple Trailers (T) Endorsement Study Guide & Practice Tests</title>
+  <meta name="description" content="The CDL Double/Triple trailers T endorsement study guides and practice tests are guaranteed to help you ace your exams and get your license.">
 <% end %>
 
 <div class="row text-center">
-  <h1>Double/Triple Endorsement Study Guide and Practice Tests</h1>
+  <div class="col-sm-12">
+    <h1>The Double/Triple Trailers (T) Study Guide System</h1>
+  </div>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
+<div class="row test-page-top">
+  <div class="col-sm-12">
+	  <p>The Double/Triple trailers (T endorsement) license will allow you to haul double and triple trailers in the states where it's legal. The Double/Triple trailer endorsement requires you to understand sensory feedback, yaw stability and rollover during steady turns, response to steering, oscillatory sway, and off-tracking. You'll need to know the correct placement of trailers, how to couple and uncouple double and triple trailers, what issues you can run into when pulling multiple trailers, and how to inspect air brakes (among other operating procedures).</p>
 
-<div class="row pricing-row">
+    <p>If you want to pass your Double/Triple trailers endorsement test the first time, you're in luck - we have a powerful study and practice test portal designed to quickly give you the knowloedge you need. Our study guide will help you prepare for the types of questions you'll run into when you take the test, and the practice test portal will let you see where you're at in your studies.</p>
+
+    <p>You can check out just the Double/Triple trailers study guide or the practice test separately, or you can get both for the best value. Either way, our study materials will help you ace the test so you can get your T endorsement the first time and be on your way. We guarantee it!</p>
+	</div>
+
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
+</div>
+
+</div><!-- close main container -->
+
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
+
+			<h4><i class="fa fa-check"></i> Section 2: Driving Safely</h4>
+			<h4><i class="fa fa-check"></i> Section 5: Air Brakes</h4>
+			<h4><i class="fa fa-check"></i> Section 6: Combination Vehicles</h4>
+			<h4><i class="fa fa-check"></i> Section 7: Doubles and Triples</h4>
+
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/xiXOo55JiuU?rel=0" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>Double/Triple Trailers Study Guide</h2>
+			<%= image_tag "cdl_study_guide-page.png", alt: "Double/triple trailers endorsement study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Simplified information
+			  <li>Study the right sections
+			  <li>Ready for YOUR State!
+			  <li>Available in multiple formats
+			</ul>
+			<p>Our Double/Triple trailers study guide was created for people like you that want to know what to study so you can pass the exam the first time. Don't spend your time trying to figure out what to study - we give you only the sections you need for the T endorsement to make it easy and let you focus your efforts. Take our study guide for a spin and feel confident on test day.</p>
+
+			<p>If you're someone that likes to be able to easily review information whenver you have a little time, you'll love the Double/Triple endorsement study guide. Download in PDF, ePub, or mobi formats and study it wherever you go.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>Double/Triple Trailers Practice Test</h2>
+			<%= image_tag "cdl-practice-test.png", alt: "Double/triple trailers endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Designed like the actual test
+			  <li>Take it at your own pace
+			  <li>Automatic scoring
+			  <li>Use on any device
+			</ul>
+
+      <p>Our Double/Triple pratice test portal was built so you can practice taking the exam as many times as you need in order to feel confident on test day. You'll be given questions very similar to what you'll see on the actual T endorsement test, and immediately know whether you got the right or wrong. Save and quit at any time, and get an automatic score when you're finished.</p>
+
+      <p>Practice tests help simulate the real test, so you'll be more than prepared when you're taking the actual thing. Want to ace your Double/Triple endorsement exam? This is how you do it!</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+	</div>
+</div>
+
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>CDL Class B Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+  <div class="row pricing-row">
   <div class="col-sm-12">
 		<div id="pricing-table" class="pricing-table">
 		  <ul>
@@ -18,18 +112,20 @@
 		    <li><strong>Powerful</strong> Strategies</li>
 		    <li>Test Day Tips</li>
 		    <li>PDF, ePub, mobi formats</li>
+		    <li><strong>Money back guarantee</strong></li>
 		    <li class="price"><span class="dollar">$</span>11</li>
 		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=PRYT8KZZWSHB6", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 
 		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+		    <li class="heading">Complete Package <span class="label label-danger">Best Deal</span><br/>(Practice Test + Study Guide)</li>
 		    <li><strong>Complete</strong> Practice Test</li>
 		    <li><strong>All</strong> Study Guide Formats</li>
 		    <li><strong>Full</strong> Access</li>
 		    <li><strong>Master</strong> the Test</li>
+		    <li><strong>Money back guarantee</strong></li>
 		    <li class="price"><span class="dollar">$</span>17</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=XYMXYZPQ5ZH8Q", class: "btn btn-primary btn-lg" %></li>
+		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=XYMXYZPQ5ZH8Q", class: "btn btn-primary btn-lg btn-danger" %></li>
 		  </ul>
 
 		  <ul>
@@ -38,19 +134,10 @@
 		    <li>Interactive</li>
 		    <li><strong>Automatic</strong> Scoring</li>
 		    <li><strong>Unlimited</strong> Attempts</li>
+		    <li><strong>Money back guarantee</strong></li>
 		    <li class="price"><span class="dollar">$</span>9</li>
 		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=8WKLW2D4CJ77W", class: "btn btn-primary btn-lg" %></li>
 		  </ul>
 		</div>
 	</div>
 </div>
-
-<p>
-
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
-
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
-
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
-
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
