Add Hazardous materials endorsement content and fix double triple page

--- a/app/views/pages/double_triple_endorsement.html.erb
+++ b/app/views/pages/double_triple_endorsement.html.erb
@@ -100,7 +100,7 @@
 <div class="container">
   <div class="row text-center">
     <a name="pricing-section"></a>
-    <h2>CDL Class B Practice Test and Study Guide</h2>
+    <h2>Double/Triple Trailers Practice Test and Study Guide</h2>
     <p>Choose your package below to get started.</p>
   </div>
   <div class="row pricing-row">
@@ -140,4 +140,3 @@
 		  </ul>
 		</div>
 	</div>
-</div>
