--- a/app/views/pages/hazardous_materials_endorsement.html.erb
+++ b/app/views/pages/hazardous_materials_endorsement.html.erb
@@ -1,56 +1,150 @@
 <% content_for :head do %>
-  <title>Hazardous Materials Endorsement Study Guide & Practice Tests</title>
+  <title>Hazardous Materials Endorsement Study Guide & Practice Test</title>
   <meta name="description" content="Hazardous Materials Endorsement study guides and practice tests are available at CDLStudyGuideHQ.com - check them out here.">
 <% end %>
 
 <div class="row text-center">
-  <h1>Hazardous Materials Endorsement Study Guide and Practice Tests</h1>
+  <h1>Hazardous Materials (HAZMAT) Endorsement Study Guide and Practice Test</h1>
 </div>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis, nisi eget laoreet feugiat, mi ante venenatis sem, fermentum sollicitudin sem nisi tempor nibh. Vivamus gravida libero sit amet porttitor tempus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris eget dignissim felis, et hendrerit metus. Curabitur porttitor libero ut massa dapibus, sed euismod velit sollicitudin. Duis efficitur consequat nisi, egestas molestie elit auctor quis. Phasellus aliquet pharetra erat, a tempus ipsum placerat id. Vestibulum sed elit a mauris vehicula vulputate vel quis justo. Nunc aliquet pretium tincidunt. Quisque fringilla vulputate turpis et efficitur. Donec blandit pellentesque ultricies. Aenean iaculis nulla et orci porttitor viverra. Donec fermentum vehicula sodales. Pellentesque posuere varius posuere.</p>
-
-<div class="row pricing-row">
+<div class="row test-page-top">
   <div class="col-sm-12">
-		<div id="pricing-table" class="pricing-table">
-		  <ul>
-		    <li class="heading">Study Guide</li>
-		    <li><strong>Learn</strong> About the Test</li>
-		    <li><strong>Powerful</strong> Strategies</li>
-		    <li>Test Day Tips</li>
-		    <li>PDF, ePub, mobi formats</li>
-		    <li class="price"><span class="dollar">$</span>11</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YU9CL9Y89KZ9E", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+	  <p>After the Patriot Act and 9/11, the process for obtaining your Hazardous Materials (HAZMAT) endorsement has become stricter. The hazardous materials themselves haven't changed at all, but the TSA has become more aware of the potential threat of misuse of them.</p>
 
-		  <ul class="feature">
-		    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
-		    <li><strong>Complete</strong> Practice Test</li>
-		    <li><strong>All</strong> Study Guide Formats</li>
-		    <li><strong>Full</strong> Access</li>
-		    <li><strong>Master</strong> the Test</li>
-		    <li class="price"><span class="dollar">$</span>17</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3JRUG2ZPUPPQ2", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <p>Below are the requirements for getting your H endorsement. In addition to all of the below, you'll need to pass the HAZMAT endorsement knowledge test - that's where we come in. We have a Hazardous Materials endorsement study guide and practice test portal designed to make you ready for this. There are other requirements to getting licensed, so we wanted to make this part as simple as possible for you.</p>
 
-		  <ul>
-		    <li class="heading">Practice Test</li>
-		    <li><strong>200</strong> Questions</li>
-		    <li>Interactive</li>
-		    <li><strong>Automatic</strong> Scoring</li>
-		    <li><strong>Unlimited</strong> Attempts</li>
-		    <li class="price"><span class="dollar">$</span>9</li>
-		    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7C3MWK93U2KGA", class: "btn btn-primary btn-lg" %></li>
-		  </ul>
+    <h3>Hazardous Materials (Class H) Endorsement Requirements</h3>
+
+    <ul>
+      <li>A valid, current commercial drivers license in the state you're applying
+      <li>Proof of citizenship in the US (or you can have permanent legal residence)
+      <li>Proof of your legal name (you can't use any photocopies for this), date of birth, and identity
+      <li>DOT medical card (you get this after a physical. Your vision, hearing, and urine are tested)
+      <li>Proof of your SSN (Social Security Number)
+      <li>The Transportation Security Administration has a criminal background check that you will need to pass. <strong>Make sure that you do this part in advance</strong>, as it can take as long as two months to come through.
+      <li>And of course, successfully passing the Hazardous Materials (H) knowledge test.
+    </ul>
+
+    <p>With all the requirements involved in getting your class H endorsement, the last thing you want to have to worry about is passing the HAZMAT knowledge test. Prepare using our study guide and practice test, and then you'll be able to focus on the other requirements.</p>
+	</div>
+
+	<div class="col-sm-4 col-sm-offset-4">
+	  <%= link_to "I'M READY TO PASS", "#pricing-section", class: "btn btn-danger btn-lg pricing-section-link" %>
+	</div>
+</div>
+
+</div><!-- close main container -->
+
+<section class="test-page-header">
+	<div class="container">
+	  <div class="col-sm-5 col-sm-offset-1">
+			<h2>Material Covered</h2>
+
+			<h4><i class="fa fa-check"></i> Section 9: Hazardous Materials</h4>
+
+		</div>
+		<div class="col-sm-6 video">
+		  <div class="videoWrapper">
+	      <iframe src="//www.youtube.com/embed/R2aEjnWeyVA?rel=0" frameborder="0" allowfullscreen></iframe>
+	    </div>
+	  </div>
+	</div>
+</section>
+
+<div class="container">
+  <div class="row page-package-info">
+    <div class="col-sm-6">
+			<h2>Hazardous Materials Endorsement Study Guide</h2>
+			<%= image_tag "cdl_study_guide-page.png", alt: "Hazardous Materials endorsement study guide", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Straight to the point information
+			  <li>Only the HAZMAT section (9)
+			  <li>We have YOUR State
+			  <li>Get it in the format you need
+			</ul>
+			<p>Our Hazardous Materials endorsement study guide was created to make studying for the knowledge section as simple as possible. Instead of having to plow through the CDL handbook, learn the information you need to know from Section 9. We break it down into simple concepts and information so you'll not only be prepared to pass your knowledge test, but also so you can successfully work as a commercial driver specializing in hazardous materials.</p>
+
+			<p>Get our HAZMAT study guide and study at your convenience, whenever you please. We make it avialble as a PDF, ePub, or mobi file so you can study it at home on your computer or on your mobile device when you're away from home.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get it Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<h2>Hazardous Materials Endorsement Practice Test</h2>
+			<%= image_tag "cdl-practice-test.png", alt: "Hazardous Materials endorsement practice test", class: "cdl-book-image" %>
+			<ul class="book">
+			  <li>Prepare for the test
+			  <li>Fully interactive
+			  <li>Quick and simple
+			  <li>Save your place	  
+			</ul>
+
+      <p>We designed the Hazardous Materials endorsement practice test portal so you'd know exactly what to expect on test day. We include questions that are extremely close to the actual ones you'll get (some are even harder, to really prepare you). We designed it so you can take the test at your own pace, saving and coming back to it later if you need to. That way you can answer questions whenever you have time and see your score at the end.</p>
+
+      <p>The HAZMAT practice test is an excellent way to really prepare - it will get you used to the test environment which is a proven test passing strategy. After taking our practice tests, you'll be trained and able to focus for the actual thing.</p>
+
+			<div class="row text-center">
+			  <%= link_to "Get Started Now", "#", class: "btn btn-info pricing-section-link" %>
+			</div>
 		</div>
 	</div>
 </div>
 
-<p>
+<section class="package-cta">
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-sm-10 col-sm-offset-1">
+        <h3>Make your life easier.
+          <%= link_to "Get Your Study Materials", "#", class: "btn btn-success pricing-section-link" %></h3>
+        </h3>
+      </div>
+    </div>
+  </div>
+</section>
 
-<p>Morbi a fermentum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum laoreet interdum metus, vulputate efficitur nulla ornare et. Nulla at justo nec ipsum suscipit fringilla vitae eu metus. Aenean auctor sit amet nulla tempus posuere. Vestibulum arcu ipsum, cursus sed purus non, dapibus bibendum massa. Nullam tincidunt urna metus, nec pellentesque tellus hendrerit sed.</p>
+<div class="container">
+  <div class="row text-center">
+    <a name="pricing-section"></a>
+    <h2>Hazardous Materials Practice Test and Study Guide</h2>
+    <p>Choose your package below to get started.</p>
+  </div>
+	<div class="row pricing-row">
+	  <div class="col-sm-12">
+			<div id="pricing-table" class="pricing-table">
+			  <ul>
+			    <li class="heading">Study Guide</li>
+			    <li><strong>Learn</strong> About the Test</li>
+			    <li><strong>Powerful</strong> Strategies</li>
+			    <li>Test Day Tips</li>
+			    <li>PDF, ePub, mobi formats</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>11</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=YU9CL9Y89KZ9E", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
 
-<p>Integer egestas, sem at pharetra aliquam, leo justo dignissim massa, id malesuada urna dui non nisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam molestie, sapien eu ultrices tempor, urna sapien malesuada mi, ac placerat nulla quam fermentum mauris. Quisque sit amet tristique dui. Pellentesque magna nisl, consectetur faucibus erat vel, tincidunt pharetra purus. Nulla luctus pulvinar justo eu commodo. Aliquam imperdiet eget dui commodo feugiat. Suspendisse potenti. Donec aliquet ipsum eu nulla fermentum cursus. Integer hendrerit libero vel elit maximus euismod.</p>
+			  <ul class="feature">
+			    <li class="heading">Complete Package<br/>(Practice Test + Study Guide)</li>
+			    <li><strong>Complete</strong> Practice Test</li>
+			    <li><strong>All</strong> Study Guide Formats</li>
+			    <li><strong>Full</strong> Access</li>
+			    <li><strong>Master</strong> the Test</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>17</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=3JRUG2ZPUPPQ2", class: "btn btn-primary btn-lg btn-danger" %></li>
+			  </ul>
 
-<p>Nulla rhoncus felis tortor, vel molestie mi dignissim vitae. Aliquam erat volutpat. Curabitur hendrerit tincidunt ligula. Sed odio nisl, vulputate vitae molestie eget, pretium non est. Pellentesque nec ante metus. Cras vel velit ut mi suscipit malesuada sed sit amet lacus. Aliquam volutpat eros sed dictum auctor. Ut faucibus, erat ut consequat vehicula, magna lectus tincidunt erat, non eleifend tortor velit eget massa. Donec suscipit turpis lorem. Cras molestie volutpat velit.</p>
-
-<p>Vivamus dictum tempus massa. Ut eu odio arcu. Sed vitae convallis ex, eget semper massa. Suspendisse fermentum risus eleifend massa volutpat laoreet. Fusce in mi vel elit feugiat tristique. Sed iaculis lectus nec justo eleifend venenatis. Etiam consectetur dapibus ligula id sollicitudin.</p>
+			  <ul>
+			    <li class="heading">Practice Test</li>
+			    <li><strong>200</strong> Questions</li>
+			    <li>Interactive</li>
+			    <li><strong>Automatic</strong> Scoring</li>
+			    <li><strong>Unlimited</strong> Attempts</li>
+			    <li><strong>Money back guarantee</strong></li>
+			    <li class="price"><span class="dollar">$</span>9</li>
+			    <li><%= link_to "Buy Now", "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7C3MWK93U2KGA", class: "btn btn-primary btn-lg" %></li>
+			  </ul>
+			</div>
+		</div>
+	</div>
